--- a/templates/index.html
+++ b/templates/index.html
@@ -35,15 +35,15 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#journey">Journey</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li class="submenu-wrapper">
-                <a href="#projects">Projects<span> > </span></a>
+                <a>Contact<span> > </span></a>
                 <ul class="submenu">
-                    <li><a href="https://github.com/Senophyx/Discord-RPC">Discord-RPC</a></li>
-                    <li><a href="https://github.com/EterNomm/Whitehat">Whitehat</a></li>
-                    <li><a href="https://github.com/Senophyx/arithmos-cipher">Arithmos Cipher</a></li>
+                    <li><a target="_blank" href="https://discord.gg/atDSyuYyxv">Discord</a></li>
+                    <li><a target="_blank" href="https://twitter.com/Senophyx">Twitter</a></li>
+                    <li><a target="_blank" href="https://t.me/Senophyx">Telegram</a></li>
                 </ul>
             </li>
-            <li><a href="#sosmed">Contact</a></li>
         </ul>
     </nav>
 
