--- a/templates/index.html
+++ b/templates/index.html
@@ -24,21 +24,21 @@
 
 
     <nav class="navbar">
-        <div class="logo">
+        <div class="navbar-logo">
             <!-- <img src="./navbar-icon.png" alt=""> -->
             <p>Senophyx</p>
         </div>
-        <div class="toggle-btn">
-            <div class="nav-icon"></div>
+        <div class="navbar-toggle-btn">
+            <div class="navbar-icon"></div>
         </div>
-        <ul class="menu">
+        <ul class="navbar-menu">
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#journey">Journey</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li class="submenu-wrapper">
+            <li class="navbar-submenu-wrapper">
                 <a>Contact<span> > </span></a>
-                <ul class="submenu">
+                <ul class="navbar-submenu">
                     <li><a target="_blank" href="https://discord.gg/atDSyuYyxv">Discord</a></li>
                     <li><a target="_blank" href="https://twitter.com/Senophyx">Twitter</a></li>
                     <li><a target="_blank" href="https://t.me/Senophyx">Telegram</a></li>
