Update `about me` string and add a timeline to `journey` section

--- a/templates/index.html
+++ b/templates/index.html
@@ -86,16 +86,14 @@
                             class="icon" />
                         <h3>Work</h3>
                         <p>EterNomm</p>
-                        <p>CyraTeam</p>
                     </div>
                 </div>
                 <div class="text-container">
                     <p>
-                        Hey there! I'm Senophyx (pseudonym), a self-taught programmer who has been familiar with the
-                        world of programming for more than 4 years, especially Python.
-                        I also like watching anime and playing games (especially FPS, with 1000+ hours on VALORANT).
-                        Has developed more than 20+ projects and has been trusted to be the developer and admin of
-                        various big teams and organizations.
+                        Hello, my name is <b>Senophyx</b>. I am a programmer from <b>Indonesia</b>. I have experience in various programming languages including <b>Python</b>, <b>JavaScript</b>, <b>HTML</b>, <b>CSS</b> but I prefer to use Python.
+                        I know the programming world since <b>2019</b> because I didn't have much to do during the Covid-19 pandemic. I am also the founder of an organization called <b>EterNomm</b>, a small programmer organization focused on <b>Open-Source</b> projects.
+                        I am also an <b>administrator</b> and <b>developer</b> in several projects and large organizations. I also have many projects (most of which are unmaintained and forgotten), one of the best is <b>Discord-RPC</b>.
+                        Most of my social media is under the username <b>Senophyx</b>. So if you want to interact with me, just visit my social media or join my <b>Discord server</b>, as I'm mostly active on Discord. See you there!
                     </p>
                 </div>
             </div>
@@ -133,6 +131,13 @@
         <h1 class="text-title">Journey</h1>
         <section class="timeline-container">
             <div class="timeline-items">
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date">Nov, 2023</div>
+                    <div class="timeline-content">
+                        <h3 style="text-transform: none;">senophyx.id Went Public</h3>
+                    </div>
+                </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-date">Jun, 2022</div>
