Added Google tag to `components`

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MPYYSS7F1C"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-MPYYSS7F1C');
-    </script>
+    {% include 'components/ga.html'%}
 </head>
 
 <body>
