--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 
     <section id="profile" style="margin-bottom: 40px;">
         <div class="pic-container">
-            <img src="{{ url_for('static', filename='img/marin.jpg') }}" alt="Senophyx" class="pic-img" />
+            <img src="{{ url_for('static', filename='img/Tsukasa.png') }}" alt="Senophyx" class="pic-img" />
         </div>
         <div class="profile-text">
             <h1 class="text-title">Senophyx</h1>
@@ -180,12 +180,13 @@
             </div>
 
             <div class="project-card">
-                <img src="https://opengraph.githubassets.com/1/EterNomm/Whitehat" alt="Discord-RPC Project Card">
+                <img src="https://opengraph.githubassets.com/1/Senophyx/Website" alt="Personal Website Project Card">
                 <div class="project-content">
-                    <h3>Whitehat</h3>
-                    <p>Python library for Ethical Hacking. <b>Archived on Apr 20, 2023.</b></p>
+                    <h3>Website</h3>
+                    <p>Official source code of this website :)</p>
+                    <p style="opacity: 0.0;">-</p>
                 </div>
-                <a href="https://github.com/EterNomm/Whitehat" class="project-button">Repository</a>
+                <a href="https://github.com/Senophyx/Website" class="project-button">Repository</a>
             </div>
 
             <div class="project-card">
@@ -205,13 +206,10 @@
         <div class="sosmed-upper-container">
             <div class="sosmed-container">
                 <a href="https://github.com/Senophyx" target="_blank"><i class="ri-github-fill sosmed-icon"></i></a>
-                <a href="https://instagram.com/senophyx" target="_blank"><i
-                        class="ri-instagram-line sosmed-icon"></i></a>
+                <a href="https://instagram.com/senophyx" target="_blank"><i class="ri-instagram-line sosmed-icon"></i></a>
                 <a href="https://tiktok.com/senophyx" target="_blank"><i class="ri-tiktok-line sosmed-icon"></i></a>
                 <a href="https://twitter.com/senophyx" target="_blank"><i class="ri-twitter-x-line sosmed-icon"></i></a>
-                <a href="https://steamcommunity.com/id/senophyx" target="_blank"><i
-                        class="ri-steam-fill sosmed-icon"></i></a>
-                <a href="https://reddit.com/u/Senophyx" target="_blank"><i class="ri-reddit-fill sosmed-icon"></i></a>
+                <a href="https://discord.gg/atDSyuYyxv" target="_blank"><i class="ri-discord-line sosmed-icon"></i></a>
             </div>
         </div>
     </section>
