Added `navbar.css` to `components/navbar.html`

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
+
+
 <nav class="navbar">
     <div class="navbar-logo">
         <!-- <img src="./navbar-icon.png" alt=""> -->
