Added mail icon and change `Social Media` to `Connect with me`

--- a/templates/index.html
+++ b/templates/index.html
@@ -194,9 +194,10 @@
 
 
     <section id="sosmed">
-        <h1 class="text-title">Social Media</h1>
+        <h1 class="text-title">Connect with me</h1>
         <div class="sosmed-upper-container">
             <div class="sosmed-container">
+                <a href="mailto:contact@senophyx.id"><i class="ri-mail-line sosmed-icon"></i></a>
                 <a href="https://github.com/Senophyx" target="_blank"><i class="ri-github-fill sosmed-icon"></i></a>
                 <a href="https://instagram.com/senophyx" target="_blank"><i class="ri-instagram-line sosmed-icon"></i></a>
                 <a href="https://tiktok.com/senophyx" target="_blank"><i class="ri-tiktok-line sosmed-icon"></i></a>
