--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -17,11 +17,10 @@
         <li><a href="{{ url_for('index' ) }}#journey">Journey</a></li>
         <li><a href="{{ url_for('index' ) }}#projects">Projects</a></li>
         <li class="navbar-submenu-wrapper">
-            <a>Contact<span> > </span></a>
+            <a>More <span>></span></a>
             <ul class="navbar-submenu">
-                <li><a target="_blank" href="https://discord.gg/atDSyuYyxv">Discord</a></li>
-                <li><a target="_blank" href="https://twitter.com/Senophyx">Twitter</a></li>
-                <li><a target="_blank" href="https://t.me/Senophyx">Telegram</a></li>
+                <li><a href="{{ url_for('index') }}#sosmed">Contact</a></li>
+                <li><a href="/23080120790415792515217905241605032073790179898589791601070573" target="_blank">Soon!</a></li>
             </ul>
         </li>
     </ul>
