Change analytics service to `counter.dev`

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mediaqueries.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 
-    <!-- Google tag (gtag.js) -->
-    {% include 'components/ga.html'%}
+    <!-- Analytics Service -->
+    {% include 'components/analytics.html'%}
 </head>
 
 <body>
