--- a/templates/404.html
+++ b/templates/404.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - page not found</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/404.css') }}">
-    <!-- Google tag (gtag.js) -->
-    {% include 'components/ga.html'%}
+    
+    <!-- Analytics Service -->
+    {% include 'components/analytics.html'%}
 </head>
 
 <body>
