Added `bold` tag to redirect text

--- a/templates/components/redirect.html
+++ b/templates/components/redirect.html
@@ -10,7 +10,7 @@
     <meta http-equiv="refresh" content="0; url={{ redirect_url }}" />
 </head>
 <body>
-    <p>Redirecting you to {{ redirect_url }}</p>
+    <p>Redirecting you to <b>{{ redirect_url }}</b></p>
     <br>
     If you are not redirected automatically, <a href='{{ redirect_url }}'>click here</a>.
 </body>
