Update social links

--- a/templates/index.html
+++ b/templates/index.html
@@ -198,11 +198,11 @@
         <div class="sosmed-upper-container">
             <div class="sosmed-container">
                 <a href="mailto:contact@senophyx.id"><i class="ri-mail-line sosmed-icon"></i></a>
-                <a href="https://github.com/Senophyx" target="_blank"><i class="ri-github-fill sosmed-icon"></i></a>
-                <a href="https://instagram.com/senophyx" target="_blank"><i class="ri-instagram-line sosmed-icon"></i></a>
-                <a href="https://tiktok.com/senophyx" target="_blank"><i class="ri-tiktok-line sosmed-icon"></i></a>
-                <a href="https://twitter.com/senophyx" target="_blank"><i class="ri-twitter-x-line sosmed-icon"></i></a>
-                <a href="https://discord.gg/atDSyuYyxv" target="_blank"><i class="ri-discord-line sosmed-icon"></i></a>
+                <a href="https://senophyx.id/l/github" target="_blank"><i class="ri-github-fill sosmed-icon"></i></a>
+                <a href="https://senophyx.id/l/instagram" target="_blank"><i class="ri-instagram-line sosmed-icon"></i></a>
+                <a href="https://senophyx.id/l/tiktok" target="_blank"><i class="ri-tiktok-line sosmed-icon"></i></a>
+                <a href="https://senophyx.id/l/twitter" target="_blank"><i class="ri-twitter-x-line sosmed-icon"></i></a>
+                <a href="https://senophyx.id/l/discord" target="_blank"><i class="ri-discord-line sosmed-icon"></i></a>
             </div>
         </div>
     </section>
