--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -19,8 +19,7 @@
         <li class="navbar-submenu-wrapper">
             <a>More <span>></span></a>
             <ul class="navbar-submenu">
-                <li><a href="{{ url_for('index') }}#sosmed">Contact</a></li>
-                <li><a href="/23080120790415792515217905241605032073790179898589791601070573" target="_blank">Soon!</a></li>
+                <li><a href="{{ url_for('index') }}#social">Contact</a></li>
             </ul>
         </li>
     </ul>
