--- a/templates/index.html
+++ b/templates/index.html
@@ -193,16 +193,16 @@
     </section>
 
 
-    <section id="sosmed">
+    <section id="social">
         <h1 class="text-title">Connect with me</h1>
-        <div class="sosmed-upper-container">
-            <div class="sosmed-container">
-                <a href="mailto:contact@senophyx.id"><i class="ri-mail-line sosmed-icon"></i></a>
-                <a href="https://senophyx.id/l/github" target="_blank"><i class="ri-github-fill sosmed-icon"></i></a>
-                <a href="https://senophyx.id/l/instagram" target="_blank"><i class="ri-instagram-line sosmed-icon"></i></a>
-                <a href="https://senophyx.id/l/tiktok" target="_blank"><i class="ri-tiktok-line sosmed-icon"></i></a>
-                <a href="https://senophyx.id/l/twitter" target="_blank"><i class="ri-twitter-x-line sosmed-icon"></i></a>
-                <a href="https://senophyx.id/l/discord" target="_blank"><i class="ri-discord-line sosmed-icon"></i></a>
+        <div class="social-upper-container">
+            <div class="social-container">
+                <a href="mailto:contact@senophyx.id"><i class="ri-mail-line social-icon"></i></a>
+                <a href="https://senophyx.id/l/github" target="_blank"><i class="ri-github-fill social-icon"></i></a>
+                <a href="https://senophyx.id/l/instagram" target="_blank"><i class="ri-instagram-line social-icon"></i></a>
+                <a href="https://senophyx.id/l/tiktok" target="_blank"><i class="ri-tiktok-line social-icon"></i></a>
+                <a href="https://senophyx.id/l/twitter" target="_blank"><i class="ri-twitter-x-line social-icon"></i></a>
+                <a href="https://senophyx.id/l/discord" target="_blank"><i class="ri-discord-line social-icon"></i></a>
             </div>
         </div>
     </section>
