--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -1,4 +1,3 @@
 <footer>
-    <p class="copyright">Copyright &#169; 2023-2024 <a href="https://senophyx.id/">Senophyx</a>. All Rights
-        Reserved.</p>
+    <p class="copyright">Copyright &#169; 2023-2024 <a href="https://senophyx.id/">Senophyx</a>. All Rights Reserved.</p>
 </footer>
