--- a/templates/components/analytics.html
+++ b/templates/components/analytics.html
@@ -1,2 +1,4 @@
 <!-- This component used for analysis using counter.dev -->
 <script src="https://cdn.counter.dev/script.js" data-id="2eed3317-4f8b-458c-8383-1c42546a102c" data-utcoffset="7"></script>
+<!-- Views counter using goatcounter.com -->
+<script data-goatcounter="https://senophyx.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
