--- a/templates/components/analytics.html
+++ b/templates/components/analytics.html
@@ -1,4 +1,2 @@
-<!-- This component used for analysis using counter.dev -->
-<script src="https://cdn.counter.dev/script.js" data-id="2eed3317-4f8b-458c-8383-1c42546a102c" data-utcoffset="7"></script>
-<!-- Views counter using goatcounter.com -->
-<script data-goatcounter="https://senophyx.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+<!-- This component used for analysis using self hosted Umami -->
+<script defer src="https://analytics.senophyx.id/script.js" data-website-id="8e1b0abd-19d9-4991-bb31-4d85fa15c7ae"></script>
